--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,9 +7,10 @@
   <h1>Welcome to the {{pageName}}</h1>
   
   <!-- links or URLs are always GET resources as they are getting (retrieving) a resource -->
-  <p>The current set name is {{currentName}}</p>
+  <p>The current set Cat name is {{currentCatName}}. The current Dog name is {{currentDogName}}.</p>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
   <a href="/page3">Page 3</a>
+  <a href="/page4">Page 4</a>
 </body>
 </html>
