--- a/views/page2.handlebars
+++ b/views/page2.handlebars
@@ -10,6 +10,7 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page3">Page 3</a>
+  <a href="/page4">Page 4</a>
   
   <form action="/setName" method="POST">
     <label for="firstname">First name:</label>
@@ -18,6 +19,7 @@
     <input type="text" name="lastname" value="">
     <label for="beds">Beds:</label>
     <input type="number" name="beds" value="">
+    <input type="hidden" name="animal" value="cat">
     <input type="submit" value="submit">
   </form>
   
@@ -26,6 +28,7 @@
   
 
   <form action="/updateLast" method="POST">
+    <input type="hidden" name="animal" value="cat">
     <input type="submit" value="Update Last">
   </form>
   
@@ -35,6 +38,7 @@
   <form action="findByName" method="GET">
     <label for="name">Name to search for:</label>
     <input type="text" name="name" value="">
+    <input type="hidden" name="animal" value="cat">
     <input type="submit" value="Submit">
   </form>
 </body>
