--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -10,5 +10,29 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
+  <a href="/page4">Page 4</a>
+
+  <form action="/setName" method="POST">
+    <label for="firstname">First name:</label>
+    <input type="text" name="firstname" value="">
+    <label for="lastname">Last Name: </label>
+    <input type="text" name="lastname" value="">
+    <label for="breed">Breed:</label>
+    <input type="text" name="breed" value="">
+    <label for="age">Age:</label>
+    <input type="number" name="age" value="">
+    <input type="hidden" name="animal" value="dog">
+    <input type="submit" value="submit">
+  </form>
+  
+  <br/>
+  <br/>
+  
+  <form action="findDogByName" method="POST">
+    <label for="name">Name to search for:</label>
+    <input type="text" name="name" value="">
+    <input type="hidden" name="animal" value="dog">
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
